--- a/catalog_films/templates/catalog_films/index.html
+++ b/catalog_films/templates/catalog_films/index.html
@@ -1,4 +1,4 @@
-{% extends 'films/base.html' %}
+{% extends 'catalog_films/base.html' %}
 
 {% block content %}
     <h1>Контент главной страницы</h1>
