--- a/catalog_films/static/catalog_films/css/styles.css
+++ b/catalog_films/static/catalog_films/css/styles.css
@@ -12,23 +12,56 @@
     list-style: none;
     }
     .container {
-        max-width: 600px;
+        max-width: 1200px;
         margin: 20px auto;
         background-color: #fff;
         border-radius: 5px;
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         padding: 20px;
     }
-        .category {
-        margin-bottom: 20px;
+        .header {
+        background-color: #333;
+        color: #fff;
+        padding: 10px 0;
+        text-align: center;
+    }
+    nav ul {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #444;
+        padding: 10px 0;
+        list-style-type: none;
+    }
+    .nav-item {
+        margin: 0 15px;
+        font-size: 20px;
+    }
+
+    .nav-link {
+        color: #fff;
+        text-decoration: none;
+        transition: color 475ms ease, text-decoration 475ms ease
+    }
+    .nav-link:hover {
+    color: #00DD00;
+    }
+    .category {
+    margin-bottom: 20px;
     }
     .category-title {
         font-size: 24px;
         font-weight: bold;
         margin-bottom: 10px;
     }
+    .list-films {
+    display: flex;
+    justify-content:center
+    }
     .film-card {
         display: flex;
+        max-width: 800px;
+        max-height: 300px;
         border: 1px solid #eaeaea;
         border-radius: 5px;
         overflow: hidden;
@@ -37,7 +70,7 @@
         flex: 1;
     }
     .film-image img {
-        width: 90%;
+        width: 50%;
         height: auto;
     }
     .film-details {
@@ -58,3 +91,37 @@
         font-size: 18px;
         color: #007bff;
     }
+
+    form {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff; /* Белый цвет фона */
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+label {
+    font-weight: bold;
+}
+
+input {
+    width: 100%;
+    padding: 8px;
+    margin: 5px 0;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+button {
+    padding: 10px 20px;
+    background-color: #4CAF50; /* Зеленый цвет кнопки */
+    color: white;
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #45a049; /* Темно-зеленый цвет при наведении */
+}
